[package]
name = "fendermint_vm_chess_engine"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
pleco = { git = "https://github.com/pleco-rs/Pleco.git", branch = "main" }
pleco_engine = { git = "https://github.com/pleco-rs/Pleco.git", branch = "main" }

fendermint_vm_actor_interface = { path = "../actor_interface" }
